Completed Re-structuring of Project

--- a/index.html
+++ b/index.html
@@ -3,99 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>grouper</title>
-    <style>
-      body {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-          sans-serif;
-        line-height: 1.6;
-        margin: 0;
-        padding: 0;
-        color: #606676;
-      }
-      header,
-      nav,
-      section,
-      article,
-      aside,
-      footer,
-      .qoute {
-        max-width: 800px;
-        margin: 20px auto;
-        padding: 15px;
-        border: 1px solid #ddd;
-        background-color: white;
-        border-radius: 5px;
-      }
-      .qoute {
-        border: none;
-        text-align: center;
-      }
-      .qoute p {
-        color: #b8001f;
-        font-size: 22px;
-        margin: 5px;
-      }
-      header {
-        background-color: #f4f4f4;
-        text-align: center;
-      }
-      header h1 {
-        margin: 5px 0;
-        font-size: 50px;
-        display: inline-block; /* Make the h1 inline */
-        vertical-align: middle; /* Align h1 vertically in the middle of the image */
-      }
-
-      header img {
-        display: inline-block; /* Make the image inline */
-        width: 50px; /* Set a smaller width for the image */
-        vertical-align: middle; /* Align the image vertically in the middle of the h1 */
-      }
-      nav {
-        background-color: #eee;
-      }
-      footer {
-        background-color: #f4f4f4;
-        text-align: center;
-      }
-      h1,
-      h2,
-      h3 {
-        color: #b8001f;
-      }
-      pre {
-        border-radius: 5px;
-        background-color: #282c34;
-      }
-      code {
-        color: #bababa;
-        font-size: 16px;
-      }
-      .comment {
-        color: #676f7d;
-      }
-      .function {
-        color: #88c273;
-      }
-      .parameter {
-        color: #ff9d3d;
-        font-style: italic;
-      }
-      .keyword {
-        color: #f95454;
-      }
-      .boolean {
-        color: #77cdff;
-      }
-      .integer {
-        color: #7e60bf;
-      }
-      .string {
-        color: #e5c07b;
-      }
-    </style>
+    <title>Ruby</title>
+    <link
+      rel="stylesheet"
+      href="styles.css"
+    />
   </head>
   <body>
     <header>
@@ -104,9 +16,18 @@
         alt="Ruby Logo"
       />
       <h1>Ruby</h1>
-    </header>
+  <ul>
+    </li>
+    <li class="redir"><a href="installation.html">Installation</a></li>
+    <li class="redir"><a href="features.html">Features</a></li>
+    <li class="redir"><a href="tutorials.html">Tutorials</a></li>
+    <li class="redir"><a href="history.html">History</a></li>
+    <li class="redir"><a href="index.html">Home</a></li>
+  </ul>
+</header>
+
     <main>
-      <div class="qoute">
+      <div class="quote">
         <p>
           <em>
             Ruby is simple in appearance, but is very complex inside, just like
@@ -139,122 +60,6 @@
           code, making it a popular choice for both beginners and experienced
           programmers alike.
         </p>
-      </section>
-      <section id="history">
-        <h2>History</h2>
-        <p>
-          Ruby was born on February 24th, 1993, as that was the day that creator Yukihiro Matsumoto,
-          otherwise referred to as Matz, picked the name Ruby. Matsumoto wanted to design a language
-          that combined aspects of his favorite languages, including Perl, Smalltalk, Eiffel and Ada.
-          Ruby 0.95 was the first public release, coming out in 1995. For about a decade, the language
-          was only really popular in Japan. That changed in 2004, when David Heinemeier Hansson introduced
-          Ruby on Rails, a web development framework. Rails became very popular for web development throughout
-          the 2000's, leveraging the expressiveness of Ruby to make web development more intuitive for developers.
-          By 2016, ruby was the 8th most popular programming language.
-        </p>
-        <p>
-          Currently, Ruby's popularity is so-so. With the ever evolving world of web development, Rails
-          became less popular for new web apps, and so therefore did Ruby. However, Ruby is still relevant.
-          Rails may be less popular than more recent frameworks, but it is still used widely, and is still one
-          of the highest paying web technologies. Ruby is still used for its expressiveness and readability, as
-          programmers enjoy being able to write concise and expressive programs. Companies such as Airbnb,
-          Shopify, and Amazon use Rails for some of their websites. While Ruby's popularity may have dwindled a bit
-          in the past decade, the community is still alive and well, and it's clear that Ruby isn't going anywhere
-          anytime soon.
-        </p>
-        <h3>Sources:</h3>
-        <ul>
-          <li><a href=https://survey.stackoverflow.co/2022/#section-most-loved-dreaded-and-wanted-programming-scripting-and-markup-languages>https://survey.stackoverflow.co/2022/#section-most-loved-dreaded-and-wanted-programming-scripting-and-markup-languages</a></li>
-          <li><a href=https://auth0.com/blog/a-brief-history-of-ruby>https://auth0.com/blog/a-brief-history-of-ruby/</a></li>
-          <li><a href=https://www.youtube.com/watch?v=gTNC26BtRFc&t=85s>https://www.youtube.com/watch?v=gTNC26BtRFc&t=85s/</a></li>
-        </ul>
-      </section>
-      <section id="links">
-        <h2>Links to documentation, manuals,</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum non et
-          quia. Illo repudiandae delectus quos! Alias, odit mollitia! Iure enim
-          odio sit ab alias omnis doloremque quia error possimus.Lorem, ipsum
-          dolor sit amet consectetur adipisicing elit. Cum non et quia. Illo
-          repudiandae delectus quos! Alias, odit mollitia! Iure enim odio sit ab
-          alias omnis doloremque quia error possimus. Lorem, ipsum dolor sit
-          amet consectetur adipisicing elit. Cum non et quia. Illo repudiandae
-          delectus quos! Alias, odit mollitia! Iure enim odio sit ab alias omnis
-          doloremque quia error possimus.
-        </p>
-      </section>
-      <section id="install-intructions">
-        <h2>Translators and Installation Instructions</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum non et
-          quia. Illo repudiandae delectus quos! Alias, odit mollitia! Iure enim
-          odio sit ab alias omnis doloremque quia error possimus.Lorem, ipsum
-          dolor sit amet consectetur adipisicing elit. Cum non et quia. Illo
-          repudiandae delectus quos! Alias, odit mollitia! Iure enim odio sit ab
-          alias omnis doloremque quia error possimus. Lorem, ipsum dolor sit
-          amet consectetur adipisicing elit. Cum non et quia. Illo repudiandae
-          delectus quos! Alias, odit mollitia! Iure enim odio sit ab alias omnis
-          doloremque quia error possimus.
-        </p>
-      </section>
-      <section id="comparison">
-        <h2>Characteristics and Features, Compared with other languages</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum non et
-          quia. Illo repudiandae delectus quos! Alias, odit mollitia! Iure enim
-          odio sit ab alias omnis doloremque quia error possimus.Lorem, ipsum
-          dolor sit amet consectetur adipisicing elit. Cum non et quia. Illo
-          repudiandae delectus quos! Alias, odit mollitia! Iure enim odio sit ab
-          alias omnis doloremque quia error possimus. Lorem, ipsum dolor sit
-          amet consectetur adipisicing elit. Cum non et quia. Illo repudiandae
-          delectus quos! Alias, odit mollitia! Iure enim odio sit ab alias omnis
-          doloremque quia error possimus.
-        </p>
-      </section>
-      <section id="tutorials">
-        <h2>Tutorials</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum non et
-          quia. Illo repudiandae delectus quos! Alias, odit mollitia! Iure enim
-          odio sit ab alias omnis doloremque quia error possimus.Lorem, ipsum
-          dolor sit amet consectetur adipisicing elit. Cum non et quia. Illo
-          repudiandae delectus quos! Alias, odit mollitia! Iure enim odio sit ab
-          alias omnis doloremque quia error possimus. Lorem, ipsum dolor sit
-          amet consectetur adipisicing elit. Cum non et quia. Illo repudiandae
-          delectus quos! Alias, odit mollitia! Iure enim odio sit ab alias omnis
-          doloremque quia error possimus.
-        </p>
-        <article class="example">
-          <h3>Example 1. Bubble Sort</h3>
-          <pre>
-            <code>
-  <span class="keyword">def</span> <span class="function">bubble_sort</span>(<span class="parameter">array</span>)
-      n <span class="keyword">=</span> array.length
-      <span class="keyword">loop do</span>
-        swapped = <span class="boolean">false</span>
-        <span class="comment"># Iterate from 0 to n-2</span>
-        (<span class="integer">1</span>...n).each <span class="keyword">do</span> |i|
-          <span class="comment"># Compare the current element with the previous one</span>
-          <span class="keyword">if</span> array[i <span class="keyword">-</span> <span class="integer">1</span>] <span class="keyword">></span> array[i]
-            <span class="comment"># Swap the elements</span>
-            array[i <span class="keyword">-</span> 1], array[i] <span class="keyword">=</span> array[i], array[i <span class="keyword">-</span> <span class="integer">1</span>]
-            swapped <span class="keyword">=</span> <span class="boolean">true</span>
-          <span class="keyword">end</span>
-        <span class="keyword">end</span>
-        <span class="comment"># Break the loop if no elements were swapped</span>
-        <span class="keyword">break</span> <span class="keyword">unless</span> swapped
-      <span class="keyword">end</span>
-      <span class="comment"># Return sorted array</span>
-      array
-    <span class="keyword">end</span>
-    <span class="comment"># Example usage:</span>
-    arr <span class="keyword">=</span> [<span class="integer">5</span>, <span class="integer">3</span>, <span class="integer">8</span>, <span class="integer">4</span>, <span class="integer">2</span>]
-    <span class="function">puts</span> <span class="string">"Original array:</span> <span class="integer">#{</span><span class="string">arr</span><span class="integer">}</span><span class="string">"</span>
-    sorted_arr <span class="keyword">=</span> bubble_sort(arr)
-    <span class="function">puts</span> <span class="string">"Sorted array:</span> <span class="integer">#{</span><span class="string">sorted_arr</span><span class="integer">}</span><span class="string">"</span>
-            </code>
-          </pre>
-        </article>
       </section>
     </main>
     <footer>
