Updated Index.html added more content

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Ruby_logo.svg/198px-Ruby_logo.svg.png?20101129171534"
         alt="Ruby Logo"
       />
-      <h1>Ruby</h1>
+      <h1 class="header-title">Ruby</h1>
   <ul>
     </li>
     <li class="redir"><a href="installation.html">Installation</a></li>
@@ -38,28 +38,34 @@
       </div>
       <section id="general-desc">
         <h2>General Description</h2>
-        <p>
-          Ruby is an interpreted, high-level, general purpose programming
-          language known for its simplicity and flexibility. Designed by
-          <a
-            href="https://en.wikipedia.org/wiki/Yukihiro_Matsumoto"
-            target="_blank"
-          >
-            Yukihiro Matsumoto
-          </a>
-          and released in the mid-1990s, Ruby places an emphasis on being
-          user-friendly with a simple syntax that prioritizes developer
-          happiness, productivity and readability. It is dynamically typed, uses
-          garbage-collecting, and just-in-time compilation supporting
-          object-oriented, functional, and imperative programming styles. Ruby
-          is widely recognized for its use in the web development framework Ruby
-          on Rails, which simplifies building full stack web applications. Ruby
-          on Rails has been used to build big names like Shopify, Twitter,
-          Github, Twitch and more. With a strong focus on readability and
-          expressiveness, Ruby allows developers to write concise, yet powerful
-          code, making it a popular choice for both beginners and experienced
-          programmers alike.
-        </p>
+        <p><figure><img class="photo-floatR" src="https://www.inno.go.jp/image/about/sv_matsumoto.jpg" alt="Yukihiro Matsumoto photo">
+        <figcaption><em>Creator :	Yukihiro Matsumoto</em> </figcaption></figure>Ruby is an interpreted, high-level, general-purpose scripting programming language known for its simplicity and flexibility. Created by           <a
+          href="https://en.wikipedia.org/wiki/Yukihiro_Matsumoto"
+          target="_blank"
+        >
+          Yukihiro "Matz" Matsumoto
+        </a> and released in the mid-1990s, Ruby was designed to be natural and intuitive to read and write, with an emphasis on user-friendliness and a simple syntax that enhances developer happiness and productivity. </p>
+
+
+<p>Ruby is dynamically typed, employs garbage collection, and supports just-in-time (JIT) compilation. It accommodates a variety of programming paradigms, including object-oriented, functional, and imperative styles. This makes Ruby a useful tool for many different kinds of projects.</p>
+
+<p> Ruby gained widespread recognition through its association with the Ruby on Rails framework, a powerful tool that simplifies the process of building full-stack web applications.Ruby on Rails, often simply called Rails, has been used to develop major platforms such as Shopify, Twitter, GitHub, and Twitch, showcasing Ruby's robustness and capability in handling complex web applications.</p>
+<p>Ruby is also open-source, meaning its source code is freely available for anyone to 
+  go through, modify, and distribute. This openness fosters a collaborative and active community of developers who contribute to its continuous improvement and the development of numerous libraries and tools. The open-source nature of Ruby ensures that it remains adaptable to evolving programming needs and helps maintain a rich ecosystem of resources for developers.</p>
+
+<p>With a strong focus on code readability and expressiveness, Ruby allows developers to write sweet and simple yet powerful code. This feature makes it an attractive option for both beginners and seasoned programmers, as it prioritizes simplicity and clarity in coding.</p>
+
+        <article>
+          <h3>Hello World</h3>
+          <p>A simple demonstration of Ruby's syntax can be seen in the classic "Hello World" example:</p>
+          <pre>
+            <code>
+ <span class="keyword">puts</span> <span class="string">"Hello World"</span>
+            </code>
+          </pre>
+          <p>This one-liner showcases Ruby's straightforward syntax for outputting text, emphasizing its reputation for being easy to learn and use.
+          </p>
+        </article>
       </section>
     </main>
     <footer>
