--- a/installation.html
+++ b/installation.html
@@ -15,7 +15,7 @@
         src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Ruby_logo.svg/198px-Ruby_logo.svg.png?20101129171534"
         alt="Ruby Logo"
       />
-      <h1>Ruby</h1>
+      <h1 class="header-title">Ruby</h1>
   <ul>
     </li>
     <li class="redir"><a href="installation.html">Installation</a></li>
