--- a/tutorials.html
+++ b/tutorials.html
@@ -15,7 +15,7 @@
         src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Ruby_logo.svg/198px-Ruby_logo.svg.png?20101129171534"
         alt="Ruby Logo"
       />
-      <h1>Ruby</h1>
+      <h1 class="header-title">Ruby</h1>
   <ul>
     </li>
     <li class="redir"><a href="installation.html">Installation</a></li>
@@ -45,30 +45,30 @@
         <h3>Example 1. Bubble Sort</h3>
         <pre>
           <code>
-            <span class="keyword">def</span> <span class="function">bubble_sort</span>(<span class="parameter">array</span>)
-                n <span class="keyword">=</span> array.length
-                <span class="keyword">loop do</span>
-                  swapped = <span class="boolean">false</span>
-                  <span class="comment"># Iterate from 0 to n-2</span>
-                  (<span class="integer">1</span>...n).each <span class="keyword">do</span> |i|
-                    <span class="comment"># Compare the current element with the previous one</span>
-                    <span class="keyword">if</span> array[i <span class="keyword">-</span> <span class="integer">1</span>] <span class="keyword">></span> array[i]
-                      <span class="comment"># Swap the elements</span>
-                      array[i <span class="keyword">-</span> 1], array[i] <span class="keyword">=</span> array[i], array[i <span class="keyword">-</span> <span class="integer">1</span>]
-                      swapped <span class="keyword">=</span> <span class="boolean">true</span>
-                    <span class="keyword">end</span>
-                  <span class="keyword">end</span>
-                  <span class="comment"># Break the loop if no elements were swapped</span>
-                  <span class="keyword">break</span> <span class="keyword">unless</span> swapped
-                <span class="keyword">end</span>
-                <span class="comment"># Return sorted array</span>
-                array
-              <span class="keyword">end</span>
-              <span class="comment"># Example usage:</span>
-              arr <span class="keyword">=</span> [<span class="integer">5</span>, <span class="integer">3</span>, <span class="integer">8</span>, <span class="integer">4</span>, <span class="integer">2</span>]
-              <span class="function">puts</span> <span class="string">"Original array:</span> <span class="integer">#{</span><span class="string">arr</span><span class="integer">}</span><span class="string">"</span>
-              sorted_arr <span class="keyword">=</span> bubble_sort(arr)
-              <span class="function">puts</span> <span class="string">"Sorted array:</span> <span class="integer">#{</span><span class="string">sorted_arr</span><span class="integer">}</span><span class="string">"</span>
+  <span class="keyword">def</span> <span class="function">bubble_sort</span>(<span class="parameter">array</span>)
+      n <span class="keyword">=</span> array.length
+      <span class="keyword">loop do</span>
+        swapped = <span class="boolean">false</span>
+        <span class="comment"># Iterate from 0 to n-2</span>
+        (<span class="integer">1</span>...n).each <span class="keyword">do</span> |i|
+          <span class="comment"># Compare the current element with the previous one</span>
+          <span class="keyword">if</span> array[i <span class="keyword">-</span> <span class="integer">1</span>] <span class="keyword">></span> array[i]
+            <span class="comment"># Swap the elements</span>
+            array[i <span class="keyword">-</span> 1], array[i] <span class="keyword">=</span> array[i], array[i <span class="keyword">-</span> <span class="integer">1</span>]
+            swapped <span class="keyword">=</span> <span class="boolean">true</span>
+          <span class="keyword">end</span>
+        <span class="keyword">end</span>
+        <span class="comment"># Break the loop if no elements were swapped</span>
+        <span class="keyword">break</span> <span class="keyword">unless</span> swapped
+      <span class="keyword">end</span>
+      <span class="comment"># Return sorted array</span>
+      array
+    <span class="keyword">end</span>
+    <span class="comment"># Example usage:</span>
+    arr <span class="keyword">=</span> [<span class="integer">5</span>, <span class="integer">3</span>, <span class="integer">8</span>, <span class="integer">4</span>, <span class="integer">2</span>]
+    <span class="function">puts</span> <span class="string">"Original array:</span> <span class="integer">#{</span><span class="string">arr</span><span class="integer">}</span><span class="string">"</span>
+    sorted_arr <span class="keyword">=</span> bubble_sort(arr)
+    <span class="function">puts</span> <span class="string">"Sorted array:</span> <span class="integer">#{</span><span class="string">sorted_arr</span><span class="integer">}</span><span class="string">"</span>
           </code>
         </pre>
       </article>
