Added Sources to index page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
           <p>This one-liner showcases Ruby's straightforward syntax for outputting text, emphasizing its reputation for being easy to learn and use.
           </p>
         </article>
+        <article>
+          <h3>Sources:</h3>
+          <ul>
+            <li><a href="https://www.ruby-lang.org/en/">Ruby Official Website</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Ruby_(programming_language)">Ruby Wikipedia Page</a></li>
+            <li><a href="https://www.geeksforgeeks.org/ruby-programming-language/">GeeksForGeeks Ruby Page</a></li>
+            <li><a href="https://www.youtube.com/watch?v=t_ispmWmdjY&t=8256s&ab_channel=freeCodeCamp.org">freeCodeCamp Ruby Video</a></li>
+            <li><a href="https://www.youtube.com/watch?v=UYm0kfnRTJk&t=38s&ab_channel=Fireship">Fireship Ruby in 100 Seconds Video</a></li>
+          </ul>
+        </article>
       </section>
     </main>
     <footer>
