--- a/installation.html
+++ b/installation.html
@@ -31,18 +31,27 @@
       <section id="install-intructions">
         <h2>Translators and Installation Instructions</h2>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum non et
-          quia. Illo repudiandae delectus quos! Alias, odit mollitia! Iure enim
-          odio sit ab alias omnis doloremque quia error possimus.Lorem, ipsum
-          dolor sit amet consectetur adipisicing elit. Cum non et quia. Illo
-          repudiandae delectus quos! Alias, odit mollitia! Iure enim odio sit ab
-          alias omnis doloremque quia error possimus. Lorem, ipsum dolor sit
-          amet consectetur adipisicing elit. Cum non et quia. Illo repudiandae
-          delectus quos! Alias, odit mollitia! Iure enim odio sit ab alias omnis
-          doloremque quia error possimus.
+          Installing ruby onto your system is quite easy, but depending on the system varies. Some of the most common systems will
+          have step by step instructions on how to install.
+        </p>
+        <h3> Debian or Ubuntu </h3>
+        <p>
+          $ sudo apt-get install ruby-full
+        </p>
+        <h3> CentOS, Fedora, or RHEL </h3>
+        <p>
+          $ sudo yum install ruby
+        </p>
+        <h3> snap (Ubuntu or other Linux distrubtions </h3>
+        <p>
+          $ sudo snap install ruby --classic
+        </p>
+        <h3> Checking to see if you already have ruby installed </h3>
+        <p>
+          You can check inside a terminal emulator by typing:
+          $ ruby -v 
         </p>
       </section>
-      
 
       <footer>
         <p>&copy; Team Grouper Language Website Assignment CS354</p>
