Updated installation.html and included sources

--- a/installation.html
+++ b/installation.html
@@ -51,6 +51,10 @@
           You can check inside a terminal emulator by typing:
           $ ruby -v 
         </p>
+        <h4>Sources:</h4>
+        <ul>
+          <li><a href=https://www.ruby-lang.org/en/documentation/installation/>https://www.ruby-lang.org/en/documentation/installation/</a></li>
+        </ul>
       </section>
 
       <footer>
