--- a/installation.html
+++ b/installation.html
@@ -22,6 +22,7 @@
     <li class="redir"><a href="installation.html">Installation</a></li>
     <li class="redir"><a href="features.html">Features</a></li>
     <li class="redir"><a href="tutorials.html">Tutorials</a></li>
+    <li class="redir"><a href="teamprogram.html">Team Program</a></li>
   </ul>
 </header>
 
