Added Comparison table to tutorial page

--- a/tutorials.html
+++ b/tutorials.html
@@ -158,16 +158,15 @@
     <section id="links">
       <h2>Links to documentation, manuals,</h2>
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum non et
-        quia. Illo repudiandae delectus quos! Alias, odit mollitia! Iure enim
-        odio sit ab alias omnis doloremque quia error possimus.Lorem, ipsum
-        dolor sit amet consectetur adipisicing elit. Cum non et quia. Illo
-        repudiandae delectus quos! Alias, odit mollitia! Iure enim odio sit ab
-        alias omnis doloremque quia error possimus. Lorem, ipsum dolor sit
-        amet consectetur adipisicing elit. Cum non et quia. Illo repudiandae
-        delectus quos! Alias, odit mollitia! Iure enim odio sit ab alias omnis
-        doloremque quia error possimus.
+        For those looking for dive deeper into the Ruby here is a list of helpful resources:
       </p>
+      <ul>
+        <li><a href="https://ruby-doc.org/" target="_blank">Ruby Official Documentation</a> - The complete reference for Ruby's syntax, classes, modules, and more.</li>
+        <li><a href="https://guides.rubyonrails.org/" target="_blank">Ruby on Rails Guides</a> - Documentation for Ruby on Rails, covering everything from installation to advanced usage.</li>
+        <li><a href="https://rubystyle.guide/" target="_blank">Ruby Style Guide</a> - A guide that helps you write consistent clean Ruby code.</li>
+        <li><a href="https://www.ruby-lang.org/en/community/" target="_blank">Ruby Core</a> - The official site for the Ruby programming language community.</li>
+        <li><a href="https://rubyapi.org/" target="_blank">Ruby API Reference</a> - A collection of Ruby's built-in classes and modules.</li>
+      </ul>
     </section>
 
 
